src/test/deca/codegen/valid/sansObjet/OperationAssign0.deca
/* Description:
    Tester une operation d'assignement

    Historique:
      cree le 16/01/2020
    Sortie attendu:
    ok

*/



{
  int x = 0;
  x = (x = 2);
  println(x);
}
